--- a/modules/mod_flexicontent/tmpl/news/news.css
+++ b/modules/mod_flexicontent/tmpl/news/news.css
@@ -7,7 +7,6 @@
 .news.mod_flexicontent_wrap-green .mod_flexicontent_featured_wrapper,
 .news.mod_flexicontent_wrap-green .mod_flexicontent_standard_wrapper {
 	border-color: darkgreen!important;
-	border-width:1px 0px;
 }
 .news.mod_flexicontent_wrap-green a {
 	color: darkgreen!important;
@@ -17,7 +16,6 @@
 .news.mod_flexicontent_wrap-red .mod_flexicontent_featured_wrapper,
 .news.mod_flexicontent_wrap-red .mod_flexicontent_standard_wrapper {
 	border-color: darkred!important;
-	border-width:1px 0px;
 }
 .news.mod_flexicontent_wrap-red a {
 	color: darkred!important;
@@ -27,7 +25,6 @@
 .news.mod_flexicontent_wrap-orange .mod_flexicontent_featured_wrapper,
 .news.mod_flexicontent_wrap-orange .mod_flexicontent_standard_wrapper {
 	border-color: darkorange!important;
-	border-width:1px 0px;
 }
 .news.mod_flexicontent_wrap-orange a {
 	color: darkorange!important;
@@ -39,99 +36,121 @@
 
 
 
+
 /* CONTAINER OF EACH ORDERING GROUP */
 .news.mod_flexicontent_wrapper .mod_flexicontent {
-	width:100%;
-	margin:0px!important;
-	padding:0px!important;
+	width: 100%;
+	margin: 0% !important;
+	padding: 0% !important;
+	border-width: 0%;
 	float:left;
 	clear:both;
+}
+
+
+/* EXTERNAL ITEM CONTAINER inner container for border, padding etc */
+.news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper_innerbox,
+.news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper_innerbox {
+	position: relative !important;
+	display: table-cell !important;
+	float: none !important;
+	width: auto !important;
+	height:100% !important;
+	margin: 0% !important;
+	
+	/* can be overriden via user 's CSS */
+	padding: 4px;
+	border-width: 1px;
+	border-style: solid;
+	/*border-color: #dfdfdf #9f9f9f #9f9f9f #dfdfdf;*/
+	border-color: white;
+	border-radius:0px;
+	background-color: #EFEFEF;
 }
 
 
 /* EXTERNAL ITEM CONTAINER (ONE COLUMNS) */
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper,
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper {
-	float: left;
-	width: 96%;
-	margin-left:1%;
-	margin-right:0%;
-	padding: 1%;
-	float: left;
-	margin-bottom:4px;
-	border-radius:0px;
-	border: 1px solid;
-	border-color: #e0e0e0 #a0a0a0 #a0a0a0 #e0e0e0;
-	background-color: #f9f9f9;
+	display: table !important;
+	float: left !important;
+	margin: 0 !important;
+	padding: 0 !important;
+	border-width: 0 !important;
+	border-style: solid !important;
+	
+	/* will be overriden with element style setting via JS script */
+	width: 100%;
+	height: 100%;
 }
 
 /* EXTERNAL ITEM CONTAINER (2-COLUMNS) */
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.cols_2,
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.cols_2 {
-	width:46.8%!important;
-	margin-left:0.6%!important;
-	margin-right:0.6%!important;
-	padding: 1%!important;
+	width:50%!important;
+	margin-left:0%!important;
+	margin-right:0%!important;
+	padding: 0%!important;
 	border-width:0px !important;
 }
 
 /* EXTERNAL ITEM CONTAINER (3-COLUMNS) */
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.cols_3,
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.cols_3 {
-	width:30.8%!important;
-	margin-left:0.6%!important;
-	margin-right:0.6%!important;
-	padding: 0.6%!important;
+	width:33.33%!important;
+	margin-left:0%!important;
+	margin-right:0%!important;
+	padding: 0%!important;
 	border-width:0px !important;
 }
 
 /* EXTERNAL ITEM CONTAINER (4-COLUMNS) */
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.cols_4,
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.cols_4 {
-	width:23%!important;
-	margin-left:0.5%!important;
-	margin-right:0.5%!important;
-	padding: 0.5%!important;
+	width:25!important;
+	margin-left:0%!important;
+	margin-right:0%!important;
+	padding: 0%!important;
 	border-width:0px !important;
 }
 
 /* EXTERNAL ITEM CONTAINER (5-COLUMNS) */
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.cols_5,
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.cols_5 {
-	width:18.4%!important;
-	margin-left:0.4%!important;
-	margin-right:0.4%!important;
-	padding: 0.4%!important;
+	width:20%!important;
+	margin-left:0%!important;
+	margin-right:0%!important;
+	padding: 0%!important;
 	border-width:0px !important;
 }
 
 /* EXTERNAL ITEM CONTAINER (6-COLUMNS) */
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.cols_6,
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.cols_6 {
-	width:15.4%!important;
-	margin-left:0.3%!important;
-	margin-right:0.3%!important;
-	padding: 0.3%!important;
+	width:16.66%!important;
+	margin-left:0%!important;
+	margin-right:0%!important;
+	padding: 0%!important;
 	border-width:0px !important;
 }
 
 /* EXTERNAL ITEM CONTAINER (7-COLUMNS) */
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.cols_7,
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.cols_7 {
-	width:13.28%!important;
-	margin-left:0.25%!important;
-	margin-right:0.25%!important;
-	padding: 0.25%!important;
+	width:14.28%!important;
+	margin-left:0%!important;
+	margin-right:0%!important;
+	padding: 0%!important;
 	border-width:0px !important;
 }
 
 /* EXTERNAL ITEM CONTAINER (8-COLUMNS) */
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.cols_8,
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.cols_8 {
-	width:11.62%!important;
-	margin-left:0.22%!important;
-	margin-right:0.22%!important;
-	padding: 0.22%!important;
+	width:12.5%!important;
+	margin-left:0%!important;
+	margin-right:0%!important;
+	padding: 0%!important;
 	border-width:0px !important;
 }
 
@@ -139,17 +158,19 @@
 /* EXTERNAL CONTAINER STYLING ODD EVEN (COUNTING) */
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.odd,
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.odd {
-	background-color: #efefef;
 }
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.even,
 .news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.even {
-	background-color: #f9f9f9;
 }
 
-.news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper:hover,
-.news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper:hover {
-	border-color: darkgray !important;
-}
+/*.news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.mod_fc_activeitem:hover .mod_flexicontent_featured_wrapper_innerbox,
+.news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper:hover .mod_flexicontent_featured_wrapper_innerbox,
+.news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.mod_fc_activeitem:hover .mod_flexicontent_standard_wrapper_innerbox,
+.news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper:hover .mod_flexicontent_standard_wrapper_innerbox {
+	background-color: #D0D0D0;
+	border-color: #888 #555 #555 #888;
+	/*box-shadow: 4px 4px 2px darkgray;*/
+}*/
 
 
 /* INTERNAL ITEM CONTAINER (ONE COLUMN MODE) */
@@ -357,4 +378,67 @@
 	background:none;
 	text-decoration: none!important;
 	color: red;
+}
+
+
+.news.mod_flexicontent_wrapper .fc_overlayed {
+	/* Fallback for web browsers that don't support RGBa */
+	background-color: rgb(0, 0, 0);
+	/* RGBa with 0.6 opacity */
+	background-color: rgba(0, 0, 0, 0.3);
+	/* For IE 5.5 - 7 */
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000, endColorstr=#4C000000);
+	/* For IE 8+ */
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000, endColorstr=#4C000000)";
+	width: 96%;
+	height: auto;
+	padding: 2%;
+	margin: 0%;
+	position: absolute;
+	left: 0px;
+}
+.news.mod_flexicontent_wrapper .fc_overlayed .fc_block {
+	font-family: Raleway;
+	font-weight:900;
+	font-size: 14px;
+	line-height: 140%;
+	color: white;
+	text-shadow: 0px 0px 3px #000, -1px -1px #000, 1px 1px #000;
+}
+
+.news.mod_flexicontent_wrapper .fc_bottom {	bottom: 0px; }
+.news.mod_flexicontent_wrapper .fc_top { top: 0px; }
+.news.mod_flexicontent_wrapper .fc_full { top: 0px; height:100%; }
+
+.news.mod_flexicontent_wrapper .fc_stretch {
+	width:100% !important;
+	border: 0 !important;
+	margin: 0 !important;
+	padding: 0 !important;
+	float: none !important;
+	display: block;
+}
+.news.mod_flexicontent_wrapper .fc_float_left {
+	float: left !important;
+	margin: 6px 6px 6px 0;
+	display: block;
+}
+.news.mod_flexicontent_wrapper .fc_float_right {
+	float: right !important;
+	margin: 6px 0 6px 6px;
+	display: block;
+}
+.news.mod_flexicontent_wrapper .fc_floated {}
+
+.news.mod_flexicontent_wrapper .image_standard.fc_float_left img,
+.news.mod_flexicontent_wrapper .image_standard.fc_float_right img { border-radius: 8px; }
+.news.mod_flexicontent_wrapper .image_standard.fc_float_left img,
+.news.mod_flexicontent_wrapper .image_standard.fc_float_right img { border-radius: 8px; }
+
+.news.mod_flexicontent_wrapper .fc_clear { clear: both !important; }
+
+.news.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper .fc_auto_show { visibility: hidden; }
+.news.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper.mod_fc_activeitem .fc_auto_show.fc_show_active,  /* force showing content of active item */
+.news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper:hover .fc_auto_show {   /* force showing content if item under mouse */
+	visibility: visible;
 }
