--- a/modules/mod_flexicontent/tmpl/carousel/carousel.css
+++ b/modules/mod_flexicontent/tmpl/carousel/carousel.css
@@ -34,84 +34,6 @@
 /* EOF Colors */
 /**************/
 
-.carousel.mod_flexicontent_wrapper .mod_fc_carousel {
-	position: relative;
-	top: 0;
-	left: 0;
-	width: 100%;
-	margin: 0 0;
-}
-
-.carousel.mod_flexicontent_wrapper span.mod_fc_nav.fc_horizontal {
-	background-attachment: scroll !important;
-    -webkit-background-clip: border-box !important;
-    background-clip: border-box !important;
-    background-color: #fff !important;
-    background-image: url(images/nav.png) !important;
-    -webkit-background-origin: padding-box !important;
-    background-origin: padding-box !important;
-    background-position: -20% 50% !important;
-    background-repeat: no-repeat !important;
-    -webkit-background-size: auto auto !important;
-    background-size: auto auto !important;
-    -moz-border-radius: 10px 0 0 10px !important;
-    -webkit-border-radius: 10px 0 0 10px !important;
-    border-radius: 10px 0 0 10px !important;
-    -moz-box-shadow: 1px 1px 5px #ccc;
-    -webkit-box-shadow: 1px 1px 5px #ccc;
-    box-shadow: 1px 1px 5px #ccc;
-    height: 33px !important;
-    margin-left: 11px;
-    margin-right: 8px;
-    position: absolute !important;
-    top: 37%;
-    width: 28px
-}
-.carousel.mod_flexicontent_wrapper span.mod_fc_nav.fc_vertical {
-	background: url(images/nav_vertical.png) no-repeat scroll 50% -20% #fff !important;
-    -moz-border-radius: 10px 10px 0 0 !important;
-    -webkit-border-radius: 10px 10px 0 0 !important;
-    border-radius: 10px 10px 0 0 !important;
-    -moz-box-shadow: 0 0 5px #ccc;
-    -webkit-box-shadow: 0 0 5px #ccc;
-    box-shadow: 0 0 5px #ccc;
-    height: 31px;
-    margin-left: 48%;
-    position: relative !important;
-    width: 41px
-}
-.carousel.mod_flexicontent_wrapper span.mod_fc_nav {
-	display: block !important;
-	visibility: hidden;
-	cursor: pointer !important;
-	left: 0 !important;
-	opacity: 1 !important;
-	filter: alpha(opacity = 100) !important;
-	outline: medium none !important;
-	text-indent: -9000px !important;
-	top: 0;
-	margin: 0px;
-}
-.carousel.mod_flexicontent_wrapper span.mod_fc_nav.fc_horizontal.fc_next {
-	background-position: 115% 50% !important;
-	border-radius: 0 10px 10px 0 !important;
-	left: auto !important;
-	right: 0 !important;
-}
-.carousel.mod_flexicontent_wrapper span.mod_fc_nav.fc_vertical.fc_next {
-	background-position: 50% 115% !important;
-    -moz-border-radius: 0 0 10px 10px !important;
-    -webkit-border-radius: 0 0 10px 10px !important;
-    border-radius: 0 0 10px 10px !important;
-    left: auto !important;
-    right: 0 !important;
-    top: -7px
-}
-.carousel.mod_flexicontent_wrapper span.mod_fc_nav:hover {
-	opacity: 1 !important;
-	filter: alpha(opacity = 100) !important;
-	background-color: #555 !important;
-}
 
 
 
@@ -126,32 +48,19 @@
 }
 
 
-/* EXTERNAL ITEM CONTAINER (ONE COLUMNS) */
-.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper,
-.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper {
-	display: table !important;
-	float: left !important;
-	margin: 0 !important;
-	padding: 0 !important;
-	border-width: 0 !important;
-	border-style: solid !important;
-	
-	/* will be overriden with element style setting via JS script */
-	width: 100%;
-	height: auto;
-}
+/* EXTERNAL ITEM CONTAINER inner container for border, padding etc */
 .carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper_innerbox,
 .carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper_innerbox {
-	position: relative !important;
-	display: table-cell !important;
-	float: none !important;
-	width: auto !important;
-	height:100% !important;
-	margin: 0% !important;
+	position: relative;
+	display: block;
+	float: none;
+	width: auto;
+	height: auto;
 	
 	/* can be overriden via user 's CSS */
+	margin: 4px;
 	padding: 4px;
-	border-width: 0px;
+	border-width: 1px;
 	border-style: solid;
 	border-color: #dfdfdf #9f9f9f #9f9f9f #dfdfdf;
 	border-radius:0px;
@@ -159,9 +68,88 @@
 }
 
 
-/* EXTERNAL ITEM CONTAINER (TWO COLUMNS) */
-.carousel.mod_flexicontent_wrapper .mod_flexicontent.twocol .mod_flexicontent_standard_wrapper {
+/* EXTERNAL ITEM CONTAINER (ONE COLUMNS) */
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper,
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper {
+	/* DO NOT OVERRIDE THESE !!! this is the placement container, override margin,padding,border of inner container only */
+	display: block;
+	float: left;
+	margin: 0;
+	padding: 0;
+	border-width: 0;
+	border-style: solid;
+	width: 100%;
+	/*height: 100%;*/ /* problematic with masonry */
+}
+
+/* EXTERNAL ITEM CONTAINER (2-COLUMNS) */
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.cols_2,
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.cols_2 {
 	width:50%!important;
+	margin-left:0%!important;
+	margin-right:0%!important;
+	padding: 0%!important;
+	border-width:0px !important;
+}
+
+/* EXTERNAL ITEM CONTAINER (3-COLUMNS) */
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.cols_3,
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.cols_3 {
+	width:33.33%!important;
+	margin-left:0%!important;
+	margin-right:0%!important;
+	padding: 0%!important;
+	border-width:0px !important;
+}
+
+/* EXTERNAL ITEM CONTAINER (4-COLUMNS) */
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.cols_4,
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.cols_4 {
+	width:25%!important;
+	margin-left:0%!important;
+	margin-right:0%!important;
+	padding: 0%!important;
+	border-width:0px !important;
+}
+
+/* EXTERNAL ITEM CONTAINER (5-COLUMNS) */
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.cols_5,
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.cols_5 {
+	width:20%!important;
+	margin-left:0%!important;
+	margin-right:0%!important;
+	padding: 0%!important;
+	border-width:0px !important;
+}
+
+/* EXTERNAL ITEM CONTAINER (6-COLUMNS) */
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.cols_6,
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.cols_6 {
+	width:16.66%!important;
+	margin-left:0%!important;
+	margin-right:0%!important;
+	padding: 0%!important;
+	border-width:0px !important;
+}
+
+/* EXTERNAL ITEM CONTAINER (7-COLUMNS) */
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.cols_7,
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.cols_7 {
+	width:14.28%!important;
+	margin-left:0%!important;
+	margin-right:0%!important;
+	padding: 0%!important;
+	border-width:0px !important;
+}
+
+/* EXTERNAL ITEM CONTAINER (8-COLUMNS) */
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.cols_8,
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.cols_8 {
+	width:12.5%!important;
+	margin-left:0%!important;
+	margin-right:0%!important;
+	padding: 0%!important;
+	border-width:0px !important;
 }
 
 
@@ -173,9 +161,9 @@
 .carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.even {
 }
 
-/*.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.mod_fc_activeitem:hover .mod_flexicontent_featured_wrapper_innerbox,*/
+/*.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper.mod_fc_activeitem:hover .mod_flexicontent_featured_wrapper_innerbox,
+.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper:hover .mod_flexicontent_featured_wrapper_innerbox,*/
 .carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper.mod_fc_activeitem:hover .mod_flexicontent_standard_wrapper_innerbox,
-/*.carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_featured_wrapper:hover .mod_flexicontent_featured_wrapper_innerbox,*/
 .carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper:hover .mod_flexicontent_standard_wrapper_innerbox {
 	background-color: #D0D0D0;
 	border-color: #888 #555 #555 #888;
@@ -215,7 +203,7 @@
 /* ITEM BASIC FIELDS STYLES (FOR CUSTOM FIELDS see below, FOR IMAGE AND DATE see more below) */
 /*********************************************************************************************/
 
-.carousel.mod_flexicontent_wrapper .content {}           /* container of basic elements of standard items excluding title & image */
+.carousel.mod_flexicontent_wrapper .content_standard {}           /* container of basic elements of standard items excluding title & image */
 .carousel.mod_flexicontent_wrapper .content_featured {}  /* container of basic elements of featured items excluding title & image */
 
 
@@ -284,6 +272,15 @@
 	float: left;
 	margin: 0 6px 6px 0;
 }
+.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper .image_standard img {
+	opacity:0.7;
+	filter:alpha(opacity=70);
+}
+.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper:hover .image_standard img,
+.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper.mod_fc_activeitem .image_standard img {
+	opacity:1;
+	filter:alpha(opacity=100);
+}
 
 /* item image styling (link, image, etc) */
 .carousel.mod_flexicontent_wrapper .image_featured a:hover,
@@ -301,9 +298,9 @@
 
 
 /* CONTAINER of item hits, voting, comments */
-.carousel.mod_flexicontent_wrapper .fcitem_hits { padding: 2px 0px 1px 0px; display: inline-block !important; }
-.carousel.mod_flexicontent_wrapper .fcitem_voting { padding: 0px 0px 2px 0px; display: inline-block !important; }
-.carousel.mod_flexicontent_wrapper .fcitem_comments{ padding: 2px 0px 1px 0px; display: inline-block !important; }
+.carousel.mod_flexicontent_wrapper .fcitem_hits { padding: 2px 0px 1px 0px; display: inline-block; }
+.carousel.mod_flexicontent_wrapper .fcitem_voting { padding: 0px 0px 2px 0px; display: inline-block; }
+.carousel.mod_flexicontent_wrapper .fcitem_comments{ padding: 2px 0px 1px 0px; display: inline-block; }
 
 .carousel.mod_flexicontent_wrapper .fcitem_hits img,
 .carousel.mod_flexicontent_wrapper .fcitem_comments img {
@@ -453,45 +450,27 @@
 }
 /* Page buttons */
 .carousel.mod_flexicontent_wrapper .mod_fc_page_handles > span.mod_fc_page_handle {
-	background: none repeat scroll 0 0 #ddd;
-    border-color: #ccc;
-    -moz-border-radius: 16px;
-    -webkit-border-radius: 16px;
-    border-radius: 16px;
-    border-style: solid;
-    border-width: 2px;
-    -moz-box-shadow: 0 0 5px #ccc;
-    -webkit-box-shadow: 0 0 5px #ccc;
-    box-shadow: 0 0 5px #ccc;
-    clear: none !important;
-    color: #444;
-    display: inline-block;
-    float: left !important;
-    font-weight: bold;
-    margin: 0 0 6px 5px;
-    overflow: hidden;
-    padding: 0;
-    position: relative !important;
-    text-decoration: none;
+	position:relative !important;
+	display: inline-block;
+	float: left !important;
+	clear: none !important;
+	border: 2px solid transparent;
+	padding: 0;
+	margin: 0 2px;
+	overflow:hidden;
 }
 .carousel.mod_flexicontent_wrapper .mod_fc_page_handles > span.mod_fc_page_handle:hover {
 	border-color: #777;
 }
 
 .carousel.mod_flexicontent_wrapper .mod_fc_page_handles > span.mod_fc_page_handle.active {
-	border-color: #adadad;
-    -moz-border-radius: 16px;
-    -webkit-border-radius: 16px;
-    border-radius: 16px
+	border-color: #aaa;
 }
 
 .carousel.mod_flexicontent_wrapper .mod_fc_page_handles > span.mod_fc_page_handle > div.mod_fc_page_handle_ico {
-	 background-color: #ccc;
-    -moz-border-radius: 16px;
-    -webkit-border-radius: 16px;
-    border-radius: 16px;
-    height: 12px;
-    width: 12px
+	background: url(images/shape_square.png) no-repeat 0px 0px;
+	width: 16px;
+	height: 16px;
 }
 
 
@@ -523,26 +502,22 @@
 	width: 100% !important;
 }
 .carousel.mod_flexicontent_wrapper .mod_fc_item_handles span.mod_fc_item_handle {
-	ackground: none repeat scroll 0 0 #ddd;
-    border-color: #ccc;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    border-style: solid;
-    border-width: 2px;
-    -moz-box-shadow: 0 0 5px #ccc;
-    -webkit-box-shadow: 0 0 5px #ccc;
-    box-shadow: 0 0 5px #ccc;
-    clear: none !important;
-    color: #444;
-    display: inline-block;
-    float: left !important;
-    font-weight: bold;
-    margin: 0 0 6px 5px;
-    overflow: hidden;
-    padding: 0;
-    position: relative !important;
-    text-decoration: none;
+	position:relative !important;
+	display: inline-block;
+	float: left !important;
+	clear: none !important;
+	color:#444;
+	text-decoration:none;
+	font-weight:bold;
+	background:#ddd;
+	margin:0px 0px 0px 0px;
+	padding:0em 0em;
+	border-left:2px solid #ddd;
+	border-top:2px solid #ddd;
+	border-right:2px solid #aaa;
+	border-bottom:2px solid #aaa;
+	border-radius: 0px;
+	overflow:hidden;
 }
 .carousel.mod_flexicontent_wrapper .mod_fc_item_handles span.mod_fc_item_handle:hover {
 	background:#bbb;
@@ -643,6 +618,61 @@
 	background: url(images/control.png) no-repeat 2px 5px;
 }
 
+
+/* INTERGRATED NAVIGATION next/previous arraws */
+.carousel.mod_flexicontent_wrapper .mod_fc_carousel {
+	position: relative;
+	top: 0;
+	left: 0;
+	width: 100%;
+	margin: 0 0;
+}
+
+.carousel.mod_flexicontent_wrapper span.mod_fc_nav.fc_horizontal {
+	background: url("images/nav.png") no-repeat scroll -20% 50% #999 !important;
+	position: absolute !important;
+	height: 100% !important;
+	width: 28px;
+	border-radius: 10px 0 0 10px !important;
+}
+.carousel.mod_flexicontent_wrapper span.mod_fc_nav.fc_vertical {
+	background: url("images/nav_vertical.png") no-repeat scroll 50% -20% #999 !important;
+	position: relative !important;
+	height: 28px;
+	width: 100%;
+	border-radius: 10px 10px 0 0 !important;
+}
+.carousel.mod_flexicontent_wrapper span.mod_fc_nav {
+	display: block !important;
+	visibility: hidden;
+	cursor: pointer !important;
+	left: 0 !important;
+	opacity: 1 !important;
+	filter: alpha(opacity = 100) !important;
+	outline: medium none !important;
+	text-indent: -9000px !important;
+	top: 0;
+	margin: 0px;
+}
+.carousel.mod_flexicontent_wrapper span.mod_fc_nav.fc_horizontal.fc_next {
+	background-position: 115% 50% !important;
+	border-radius: 0 10px 10px 0 !important;
+	left: auto !important;
+	right: 0 !important;
+}
+.carousel.mod_flexicontent_wrapper span.mod_fc_nav.fc_vertical.fc_next {
+	background-position: 50% 115% !important;
+	border-radius: 0 0 10px 10px !important;
+	left: auto !important;
+	right: 0 !important;
+}
+.carousel.mod_flexicontent_wrapper span.mod_fc_nav:hover {
+	opacity: 1 !important;
+	filter: alpha(opacity = 100) !important;
+	background-color: #555 !important;
+}
+
+
 /* Outer mask to clip overflown content */
 .mod_fc_carousel_mask {
 	display:block !important;
@@ -661,7 +691,7 @@
 }
 
 .mod_fc_carousel_mask.fc_has_nav.fc_vertical {
-	margin: 6px 9px !important;
+	margin: 6px 0px !important;
 	width: auto !important;
 }
 
@@ -677,8 +707,6 @@
 
 .carousel.mod_flexicontent_wrapper .mCSB_horizontal > .mCSB_container {
 	margin-bottom: 20px;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 
@@ -699,6 +727,10 @@
 	left: 0px;
 }
 .carousel.mod_flexicontent_wrapper .fc_overlayed .fc_block {
+	font-family: Raleway;
+	font-weight:900;
+	font-size: 14px;
+	line-height: 140%;
 	color: white;
 	text-shadow: 0px 0px 3px #000, -1px -1px #000, 1px 1px #000;
 }
@@ -717,24 +749,25 @@
 }
 .carousel.mod_flexicontent_wrapper .fc_float_left {
 	float: left !important;
-	margin: 0 6px 0 6px;
+	margin: 6px 6px 6px 0;
 	display: block;
 }
 .carousel.mod_flexicontent_wrapper .fc_float_right {
 	float: right !important;
-	margin: 0 6px 0 6px;
+	margin: 6px 0 6px 6px;
 	display: block;
 }
-.carousel.mod_flexicontent_wrapper .fc_clear {
-	clear: both !important;
-}
-.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper .fc_auto_show {
-	visibility: hidden;
-}
+.carousel.mod_flexicontent_wrapper .fc_floated {}
+
+.carousel.mod_flexicontent_wrapper .image_standard.fc_float_left img,
+.carousel.mod_flexicontent_wrapper .image_standard.fc_float_right img { border-radius: 8px; }
+.carousel.mod_flexicontent_wrapper .image_standard.fc_float_left img,
+.carousel.mod_flexicontent_wrapper .image_standard.fc_float_right img { border-radius: 8px; }
+
+.carousel.mod_flexicontent_wrapper .fc_clear { clear: both !important; }
+
+.carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper .fc_auto_show { visibility: hidden; }
 .carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper.mod_fc_activeitem .fc_auto_show.fc_show_active,  /* force showing content of active item */
 .carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper:hover .fc_auto_show {   /* force showing content if item under mouse */
 	visibility: visible;
-}
-.mod_fc_nav.fc_previous.fc_vertical {
-  top: 6px !important;
 }
