+ Support for item handles vertical in carousel JS (currently disabled in module template)

--- a/modules/mod_flexicontent/tmpl/carousel/carousel.css
+++ b/modules/mod_flexicontent/tmpl/carousel/carousel.css
@@ -451,53 +451,53 @@
 /* Page buttons */
 .carousel.mod_flexicontent_wrapper .mod_fc_page_handles > span.mod_fc_page_handle {
 	background: none repeat scroll 0 0 #ddd;
-    border-color: #ccc;
-    -moz-border-radius: 16px;
-    -webkit-border-radius: 16px;
-    border-radius: 16px;
-    border-style: solid;
-    border-width: 2px;
-    -moz-box-shadow: 0 0 5px #ccc;
-    -webkit-box-shadow: 0 0 5px #ccc;
-    box-shadow: 0 0 5px #ccc;
+	border-color: #bbb;
+	-moz-border-radius: 16px;
+	-webkit-border-radius: 16px;
+	border-radius: 16px;
+	border-style: solid;
+	border-width: 5px;
+	-moz-box-shadow: 0 0 5px #bbb;
+	-webkit-box-shadow: 0 0 5px #bbb;
+	box-shadow: 0 0 5px #bbb;
 	position:relative !important;
 	display: inline-block;
 	float: left !important;
 	clear: none !important;
 	border: 2px solid transparent;
 	font-weight: bold;
-    margin: 0 0 6px 5px;
-    overflow: hidden;
-    padding: 0;
-    position: relative !important;
-    text-decoration: none;
+	margin: 0 0 6px 5px;
+	overflow: hidden;
+	padding: 0;
+	position: relative !important;
+	text-decoration: none;
 	padding: 0;
 	margin: 0 2px;
 	overflow:hidden;
 }
 .carousel.mod_flexicontent_wrapper .mod_fc_page_handles > span.mod_fc_page_handle:hover {
-	border-color: #adadad;
-    -moz-border-radius: 16px;
-    -webkit-border-radius: 16px;
-    border-radius: 16px
+	border-color: #999;
+	-moz-border-radius: 16px;
+	-webkit-border-radius: 16px;
+	border-radius: 16px;
 }
 
 .carousel.mod_flexicontent_wrapper .mod_fc_page_handles > span.mod_fc_page_handle.active {
-	background-color: #ccc;
-    -moz-border-radius: 16px;
-    -webkit-border-radius: 16px;
-    border-radius: 16px;
-    height: 12px;
-    width: 12px
+	background-color: #bbb;
+	-moz-border-radius: 16px;
+	-webkit-border-radius: 16px;
+	border-radius: 16px;
+	height: 14px;
+	width: 14px
 }
 
 .carousel.mod_flexicontent_wrapper .mod_fc_page_handles > span.mod_fc_page_handle > div.mod_fc_page_handle_ico {
-	background-color: #ccc;
-    -moz-border-radius: 16px;
-    -webkit-border-radius: 16px;
-    border-radius: 16px;
-    height: 12px;
-    width: 12px
+	background-color: #bbb;
+	-moz-border-radius: 16px;
+	-webkit-border-radius: 16px;
+	border-radius: 16px;
+	height: 14px;
+	width: 14px;
 }
 
 
@@ -522,34 +522,39 @@
 	clear:both;
 	border-width: 0px;
 	padding:0;
-	width: auto;
+	width: 100%;
+	height: auto;
 	margin: 6px auto;
 	white-space: nowrap;
-	overflow: auto !important;
-	width: 100% !important;
+	overflow-x: auto;
+	overflow-y: auto;
 }
+.carousel.mod_flexicontent_wrapper .mod_fc_item_handles.fc_scrollbox_h { white-space: nowrap; overflow-y: hidden; overflow-x: auto; width: 100%; }
+.carousel.mod_flexicontent_wrapper .mod_fc_item_handles.fc_scrollbox_v { white-space: normal; overflow-x: hidden; overflow-y: auto; width: auto; }
 .carousel.mod_flexicontent_wrapper .mod_fc_item_handles span.mod_fc_item_handle {
 	background: none repeat scroll 0 0 #ddd;
-    border-color: #ccc;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    border-style: solid;
-    border-width: 2px;
-    -moz-box-shadow: 0 0 5px #ccc;
-    -webkit-box-shadow: 0 0 5px #ccc;
-    box-shadow: 0 0 5px #ccc;
-    clear: none !important;
-    color: #444;
-    display: inline-block;
-    float: left !important;
-    font-weight: bold;
-    margin: 0 0 6px 5px;
-    overflow: hidden;
-    padding: 0;
-    position: relative !important;
-    text-decoration: none;
+	border-color: #ccc;
+	border-style: solid;
+	border-width: 2px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	-moz-box-shadow: 0 0 5px #ccc;
+	-webkit-box-shadow: 0 0 5px #ccc;
+	box-shadow: 0 0 5px #ccc;
+	color: #444;
+	clear: none;
+	float: none;
+	display: inline-block;
+	font-weight: bold;
+	margin: 0px 0px 0px 4px;
+	overflow: hidden;
+	padding: 0;
+	position: relative !important;
+	text-decoration: none;
 }
+.carousel.mod_flexicontent_wrapper .mod_fc_item_handles span.mod_fc_item_handle.fc_scrollitem_h { float: none; clear: none; }
+.carousel.mod_flexicontent_wrapper .mod_fc_item_handles span.mod_fc_item_handle.fc_scrollitem_v { float: left; clear: both; }
 .carousel.mod_flexicontent_wrapper .mod_fc_item_handles span.mod_fc_item_handle:hover {
 	background:#bbb;
 	position:relative;
@@ -661,41 +666,41 @@
 
 .carousel.mod_flexicontent_wrapper span.mod_fc_nav.fc_horizontal {
 	background-attachment: scroll !important;
-    -webkit-background-clip: border-box !important;
-    background-clip: border-box !important;
-    background-color: #fff !important;
-    background-image: url(images/nav.png) !important;
-    -webkit-background-origin: padding-box !important;
-    background-origin: padding-box !important;
-    background-position: -20% 50% !important;
-    background-repeat: no-repeat !important;
-    -webkit-background-size: auto auto !important;
-    background-size: auto auto !important;
-    -moz-border-radius: 10px 0 0 10px !important;
-    -webkit-border-radius: 10px 0 0 10px !important;
-    border-radius: 10px 0 0 10px !important;
-    -moz-box-shadow: 1px 1px 5px #ccc;
-    -webkit-box-shadow: 1px 1px 5px #ccc;
-    box-shadow: 1px 1px 5px #ccc;
-    height: 33px !important;
-    margin-left: 11px;
-    margin-right: 8px;
-    position: absolute !important;
-    top: 37%;
-    width: 28px
+	-webkit-background-clip: border-box !important;
+	background-clip: border-box !important;
+	background-color: #fff !important;
+	background-image: url("images/nav.png") !important;
+	-webkit-background-origin: padding-box !important;
+	background-origin: padding-box !important;
+	background-position: -20% 50% !important;
+	background-repeat: no-repeat !important;
+	-webkit-background-size: auto auto !important;
+	background-size: auto auto !important;
+	-moz-border-radius: 10px 0 0 10px !important;
+	-webkit-border-radius: 10px 0 0 10px !important;
+	border-radius: 10px 0 0 10px !important;
+	-moz-box-shadow: 1px 1px 5px #ccc;
+	-webkit-box-shadow: 1px 1px 5px #ccc;
+	box-shadow: 1px 1px 5px #ccc;
+	height: 33px !important;
+	margin-left: 11px;
+	margin-right: 8px;
+	position: absolute !important;
+	top: 37%;
+	width: 28px;
 }
 .carousel.mod_flexicontent_wrapper span.mod_fc_nav.fc_vertical {
-	background: url(images/nav_vertical.png) no-repeat scroll 50% -20% #fff !important;
-    -moz-border-radius: 10px 10px 0 0 !important;
-    -webkit-border-radius: 10px 10px 0 0 !important;
-    border-radius: 10px 10px 0 0 !important;
-    -moz-box-shadow: 0 0 5px #ccc;
-    -webkit-box-shadow: 0 0 5px #ccc;
-    box-shadow: 0 0 5px #ccc;
-    height: 31px;
-    margin-left: 48%;
-    position: relative !important;
-    width: 41px
+	background: url("images/nav_vertical.png") no-repeat scroll 50% -20% #fff !important;
+	-moz-border-radius: 10px 10px 0 0 !important;
+	-webkit-border-radius: 10px 10px 0 0 !important;
+	border-radius: 10px 10px 0 0 !important;
+	-moz-box-shadow: 0 0 5px #ccc;
+	-webkit-box-shadow: 0 0 5px #ccc;
+	box-shadow: 0 0 5px #ccc;
+	margin-left: 48%;
+	position: relative !important;
+	height: 31px;
+	width: 41px;
 }
 .carousel.mod_flexicontent_wrapper span.mod_fc_nav {
 	display: block !important;
@@ -717,12 +722,15 @@
 }
 .carousel.mod_flexicontent_wrapper span.mod_fc_nav.fc_vertical.fc_next {
 	background-position: 50% 115% !important;
-    -moz-border-radius: 0 0 10px 10px !important;
-    -webkit-border-radius: 0 0 10px 10px !important;
-    border-radius: 0 0 10px 10px !important;
-    left: auto !important;
-    right: 0 !important;
-    top: -7px
+	-moz-border-radius: 0 0 10px 10px !important;
+	-webkit-border-radius: 0 0 10px 10px !important;
+	border-radius: 0 0 10px 10px !important;
+	left: auto !important;
+	right: 0 !important;
+	top: -6px;
+}
+.carousel.mod_flexicontent_wrapper span.mod_fc_nav.fc_vertical.fc_previous {
+	top: 6px !important;
 }
 .carousel.mod_flexicontent_wrapper span.mod_fc_nav:hover {
 	opacity: 1 !important;
@@ -732,7 +740,7 @@
 
 
 /* Outer mask to clip overflown content */
-.mod_fc_carousel_mask {
+.carousel.mod_flexicontent_wrapper .mod_fc_carousel_mask {
 	display:block !important;
 	visibility: hidden;
 	position: relative !important;
@@ -743,13 +751,13 @@
 	height: auto;
 }
 
-.mod_fc_carousel_mask.fc_has_nav.fc_horizontal {
+.carousel.mod_flexicontent_wrapper .mod_fc_carousel_mask.fc_has_nav.fc_horizontal {
 	margin: 0px 36px 0px 36px !important;
 	width: auto !important;
 }
 
-.mod_fc_carousel_mask.fc_has_nav.fc_vertical {
-	margin: 6px 9px !important;
+.carousel.mod_flexicontent_wrapper .mod_fc_carousel_mask.fc_has_nav.fc_vertical {
+	margin: 6px 6px !important;
 	width: auto !important;
 }
 
@@ -764,7 +772,7 @@
 }
 
 .carousel.mod_flexicontent_wrapper .mCSB_horizontal > .mCSB_container {
-	margin-bottom: 20px;
+	margin-bottom: 24px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -830,7 +838,4 @@
 .carousel.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper.mod_fc_activeitem .fc_auto_show.fc_show_active,  /* force showing content of active item */
 .carousel.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper:hover .fc_auto_show {   /* force showing content if item under mouse */
 	visibility: visible;
-}
-.mod_fc_nav.fc_previous.fc_vertical {
-  top: 6px !important;
 }
