--- a/site/librairies/fcxSlide/fcxSlide.css
+++ b/site/librairies/fcxSlide/fcxSlide.css
@@ -1,4 +1,4 @@
-.fcxSlide_wrapper {
+.fcx_wrapper {
 	display: block;
 	float: left !important;
 	overflow: hidden !important;
@@ -12,8 +12,7 @@
 	border-style: solid !important;
 }
 
-
-.fcxSlide_wrapper_inner {
+.fcx_wrapper_inner {
 	display: block;
 	float: left !important;
 	overflow: hidden !important;
@@ -25,4 +24,28 @@
 	padding: 0 !important;
 	border-width: 0 !important;
 	border-style: solid !important;
+}
+
+.fcx_scroll {
+	height: auto;
+}
+.fcx_scrollbox_h {
+	white-space: nowrap;
+	overflow-y: hidden;
+	overflow-x: auto;
+	width: 100%;
+}
+.fcx_scrollbox_v {
+	white-space: normal;
+	overflow-x: hidden;
+	overflow-y: auto;
+	width: auto;
+}
+.fcx_scrollitem_h {
+	float: none;
+	clear: none;
+}
+.fcx_scrollitem_v {
+	float: left;
+	clear: both;
 }
