--- a/modules/mod_flexicontent/tmpl/news/news.css
+++ b/modules/mod_flexicontent/tmpl/news/news.css
@@ -56,6 +56,7 @@
 	float: none;
 	width: auto;
 	height: auto;
+	overflow: hidden;
 	
 	/* can be overriden via user 's CSS */
 	margin: 4px;
@@ -396,8 +397,8 @@
 	left: 0px;
 }
 .news.mod_flexicontent_wrapper .fc_overlayed .fc_block {
-	font-family: Raleway;
-	font-weight:900;
+	/*font-family: Raleway;
+	font-weight:900;*/
 	font-size: 14px;
 	line-height: 140%;
 	color: white;
@@ -428,15 +429,22 @@
 }
 .news.mod_flexicontent_wrapper .fc_floated {}
 
+.news.mod_flexicontent_wrapper .image_featured.fc_float_left img,
+.news.mod_flexicontent_wrapper .image_featured.fc_float_right img,
 .news.mod_flexicontent_wrapper .image_standard.fc_float_left img,
 .news.mod_flexicontent_wrapper .image_standard.fc_float_right img { border-radius: 8px; }
+.news.mod_flexicontent_wrapper .image_featured.fc_float_left img,
+.news.mod_flexicontent_wrapper .image_featured.fc_float_right img,
 .news.mod_flexicontent_wrapper .image_standard.fc_float_left img,
 .news.mod_flexicontent_wrapper .image_standard.fc_float_right img { border-radius: 8px; }
 
 .news.mod_flexicontent_wrapper .fc_clear { clear: both !important; }
 
+.news.mod_flexicontent_wrapper .mod_flexicontent_featured_wrapper .fc_auto_show,
 .news.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper .fc_auto_show { visibility: hidden; }
+.news.mod_flexicontent_wrapper .mod_flexicontent_featured_wrapper.mod_fc_activeitem .fc_auto_show.fc_show_active,  /* force showing content of active item */
+.news.mod_flexicontent_wrapper .mod_flexicontent_featured_wrapper:hover .fc_auto_show,  /* force showing content if item under mouse */
 .news.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper.mod_fc_activeitem .fc_auto_show.fc_show_active,  /* force showing content of active item */
-.news.mod_flexicontent_wrapper .mod_flexicontent .mod_flexicontent_standard_wrapper:hover .fc_auto_show {   /* force showing content if item under mouse */
+.news.mod_flexicontent_wrapper .mod_flexicontent_standard_wrapper:hover .fc_auto_show {   /* force showing content if item under mouse */
 	visibility: visible;
 }
