--- a/admin/models/forms/type.xml
+++ b/admin/models/forms/type.xml
@@ -472,7 +472,7 @@
 			<field name="" type="separator" default="FLEXI_STYLING" label="" level="level1" />
 			
 			<field name="form_container_css_fe" type="text" default="max-width:800px;" size="36" label="FLEXI_FORM_CONTAINER_CSS" description="FLEXI_FORM_CONTAINER_CSS_DESC" />
-			<field name="form_extra_css" type="textarea" default="" rows="5" cols="36" label="FLEXI_EDIT_FORM_CSS" description="FLEXI_EDIT_FORM_CSS_DESC" />
+			<field name="form_extra_css_fe" type="textarea" default="" rows="5" cols="36" label="FLEXI_EDIT_FORM_CSS" description="FLEXI_EDIT_FORM_CSS_DESC" />
 			<field name="form_extra_js_fe" type="textarea" default="" rows="5" cols="36" label="FLEXI_EDIT_FORM_JS" description="FLEXI_EDIT_FORM_JS_DESC" />
 			
 		</fieldset>
